2011-08-12  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* miscfuncs.cc (create_pipe): Delete obsolete function.
	* miscfuncs.h (create_pipe): Delete define.

	* pipe.c (fhandler_pipe::create_selectable): Delete obsolete comment.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::closedir): Don't free, but delete
	instead.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_proc::opendir): Declare.
	(fhandler_proc::closedir): Declare.
	* fhandler_proc.cc (fhandler_proc::opendir): New method.  Fetch list
	of active processes here once to avoid potential duplicates and store
	in dir->__handle.
	(fhandler_proc::closedir): New method.  Free dir->__handle.
	(fhandler_proc::readdir): Convert pinfo into a reference to the winpids
	entry in dir->__handle.

2011-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::get_proc_fhandler): Don't allow to
	access process info by using the Windows PID.
	* fhandler_process.cc (fhandler_process::fstat): Ditto.
	(fhandler_process::fill_filebuf): Ditto.

2011-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* (winpids::add): Make sure to store always a Windows PID in
	pidlist, even if pid is a Cygwin PID.
	(winpids::enum_processes): Fetch Cygwin processes from listing of
	shared cygwin object dir in the native NT namespace.  Only if winpid
	is true, fetch Windows processes using an additional call to
	NtQuerySystemInformation.

2011-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (format_process_status): Always print process name
	even for zombies.
	(get_mem_values): Fix loop fetching working set list to avoid out of
	memory conditions.  Return all mem values set to 0 for zombies.
	* ntdll.h (STATUS_PROCESS_IS_TERMINATING): Define.

2011-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (eval_initial_heap_size): New function fetching the heap
	size from the LoaderFlags field in the PE/COFF header.